--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.5.1",
     "@testing-library/react": "^9.3.2",
     "axios": "^0.19.0",
+    "material-table": "^1.54.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
