--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "redux-thunk-promise": "^2.0.1",
     "sinon": "^7.5.0"
   },
   "scripts": {
