--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "redux-thunk-promise": "^2.0.1",
     "sinon": "^7.5.0"
   },
+  "babel": {
+    "presets": [
+      "@babel/preset-react"
+    ]
+  },
   "main": "src/index.js",
   "scripts": {
     "test": "react-scripts test"
@@ -37,6 +42,8 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "@babel/cli": "^7.7.5",
+    "@babel/preset-react": "^7.7.4",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "jest": "^24.9.0",
