--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   },
   "main": "src/index.js",
   "scripts": {
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "publish:npm": "rm -rf dist && mkdir dist &&  babel src -d dist --copy-files"
   },
   "eslintConfig": {
     "extends": "react-app"
