--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "react-scripts test",
-    "publish:npm": "rm -rf dist && mkdir dist && npx babel src -d dist --copy-files"
+    "prepublish": "rm -rf dist && mkdir dist && npx babel src -d dist --copy-files"
   },
   "eslintConfig": {
     "extends": "react-app"
